changed audio file format

--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="spooky.css" type="text/css">
     <link rel="shortcut icon" href="https://i.postimg.cc/PJyWTHfk/ghost-favicon.png" />
     <audio autoplay loop>
-        <source src="http://www.hauntedbay.com/downloads/sounds/monstermashy.mp3" type="audio/mpeg">
+        <source src="http://www.hauntedbay.com/downloads/sounds/monstermashy.mp3" type="audio/mp3">
     </audio>
 </head>
 
